trigger on push to main

--- a/.github/workflows/run-job-monitor.yaml
+++ b/.github/workflows/run-job-monitor.yaml
@@ -3,6 +3,9 @@ name: Run Job Monitor
 on:
   schedule:
     - cron: '*/15 * * * *'
+  push:
+    branches:
+      - main
 
 env:
   AWS_REGION: 'us-east-1'
