add error handling for job queued for a long time

--- a/.github/workflows/run-job-monitor.yaml
+++ b/.github/workflows/run-job-monitor.yaml
@@ -16,6 +16,7 @@ env:
   TEST_USER_PW: ${{ secrets.TEST_USER_PW }}
   COGNITO_CLIENT_ID: ${{ secrets.COGNITO_CLIENT_ID }}
   TIMEOUT_SECONDS: 90
+  START_TIMEOUT_SECONDS: 30
   LOG_LEVEL: 'info'
   WAIT_SECONDS: 1
 
