--- a/.github/workflows/run-job-monitor.yaml
+++ b/.github/workflows/run-job-monitor.yaml
@@ -16,6 +16,7 @@ env:
   TEST_USER_PW: ${{ secrets.TEST_USER_PW }}
   COGNITO_CLIENT_ID: ${{ secrets.COGNITO_CLIENT_ID }}
   TIMEOUT_SECONDS: 90
+  QUEUED_TIMEOUT_SECONDS: 30
   LOG_LEVEL: 'info'
   WAIT_SECONDS: 1
 
@@ -32,3 +33,21 @@ jobs:
       run: |
         npm install
         npm start
+  # debug:
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Print
+  #       run: env | sort
+  # notify-on-failure:
+  #   needs: run-job-monitor
+  #   runs-on: ubuntu-latest
+  #   if: failure()
+
+  #   steps:
+  #   - name: Notify on failure
+  #     env:
+  #       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+  #     uses: Ilshidur/action-discord@master
+  #     with:
+  #       args: 'Job Failed: {{ GITHUB_ACTION }} - {{ GITHUB_REPOSITORY }}'
