improve error handling

--- a/.github/workflows/run-job-monitor.yaml
+++ b/.github/workflows/run-job-monitor.yaml
@@ -15,8 +15,8 @@ env:
   TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
   TEST_USER_PW: ${{ secrets.TEST_USER_PW }}
   COGNITO_CLIENT_ID: ${{ secrets.COGNITO_CLIENT_ID }}
-  TIMEOUT_SECONDS: 90
-  QUEUED_TIMEOUT_SECONDS: 30
+  QUEUE_TIMEOUT_MAX: 90
+  QUEUE_TIMEOUT_WARNING: 30
   LOG_LEVEL: 'info'
   WAIT_SECONDS: 1
 
