--- a/.github/workflows/run-job-monitor.yaml
+++ b/.github/workflows/run-job-monitor.yaml
@@ -32,12 +32,13 @@ jobs:
       with:
         node-version: '18'
     - name: Run job monitor
+      id: run-job-monitor
       run: |
         npm install
         npm start 2>&1 | tee output.log
-    - name: Set error message
+    - name: Set error message on failure
       id: set-error-message
-      if: ${{ failure() }}
+      if: ${{ failure() && steps.run-job-monitor.outcome == 'failure' }}
       run: echo "ERROR_MESSAGE=$(cat output.log | grep 'Error:')" >> "$GITHUB_OUTPUT"
   notify-on-failure:
     needs: run-job-monitor
